<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_buscar"
        android:title="@string/action_buscar"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:icon="@drawable/icnobuscar"/>

    <item android:id="@+id/action_notificaciones"
        android:title="@string/action_notificar"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:icon="@drawable/icononotificacion"/>

    <item android:id="@+id/action_reportar"
        android:title="@string/action_Reportar"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:icon="@drawable/iconoreporte"/>

    <item android:id="@+id/action_ubicacion"
        android:title="@string/action_Ubicacion"
        android:orderInCategory="4"
        android:showAsAction="never" />

    <item android:id="@+id/action_configuracion"
        android:title="@string/action_Configuracion"
        android:orderInCategory="5"
        android:showAsAction="never" />

    <item android:id="@+id/action_cerrarsesion"
        android:title="@string/action_cerrarsesion"
        android:orderInCategory="6"
        android:showAsAction="never" />


</menu>